cluster/default/nginx-52w/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-52w
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx-52w
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nginx-52w
    spec:
      containers:
      - image: ghcr.io/mudkipme/52w-nginx:latest
        imagePullPolicy: Always
        name: nginx-52w
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 1Gi
        volumeMounts:
        - mountPath: /etc/nginx/nginx.conf
          name: nginx-52w
          subPath: nginx.conf
        - mountPath: /var/cache/nginx
          name: nginx-52w-persistent-storage
      nodeSelector:
        lke.linode.com/pool-id: "125654"
      volumes:
      - configMap:
          name: nginx-52w
        name: nginx-52w
      - name: nginx-52w-persistent-storage
        persistentVolumeClaim:
          claimName: nginx-52w-pvc
