cluster/default/nginx-52w/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: le-wildcard-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
  name: nginx-52w
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: wiki.52poke.com
    http:
      paths:
      - backend:
          service:
            name: nginx-52w
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - wiki.52poke.com
    secretName: wiki-52poke-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: le-cloudflare-issuer
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/server-alias: www.52poke.wiki
    nginx.ingress.kubernetes.io/enable-access-log: "false"
    nginx.ingress.kubernetes.io/proxy-body-size: 16m
    nginx.ingress.kubernetes.io/proxy-redirect-from: "https://wiki.52poke.com"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://52poke.wiki"
  name: nginx-52w-wiki
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: 52poke.wiki
    http:
      paths:
      - backend:
          service:
            name: nginx-52w
            port:
              number: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - 52poke.wiki
    - www.52poke.wiki
    - s0.52poke.wiki
    - s1.52poke.wiki
    - util.52poke.wiki
    secretName: 52poke-wiki-tls
